Projects Grid overflow fixed

--- a/src/Pages/Portfolio.css
+++ b/src/Pages/Portfolio.css
@@ -96,6 +96,7 @@
     height: 100%;
     grid-template-columns: repeat(6, 180px) ;
     grid-gap: 20px;
+    padding: 10px 0;
     overflow-x: auto;
     overflow-y: visible;
     scroll-snap-type: x proximity;
