--- a/src/Pages/ProjectTileStyles.css
+++ b/src/Pages/ProjectTileStyles.css
@@ -165,23 +165,15 @@ h4:hover {
 @media screen and (max-width: 980px) {
   .project-tile-cont-smoll {
     border-radius: 50%;
-    /* border: 3px solid goldenrod; */
+
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border: 3px solid goldenrod;
     scroll-snap-align: center;
     overflow: hidden;
+    /* FIXED SAFARI */
     -webkit-transform: translate3d(0,0,0);
-    /* box-shadow:  2px 2px 6px rgba(190, 170, 79, 0.337); */
-
-  /* border: 2px solid transparent; 
-  background: linear-gradient(45deg, goldenrod, red) border-box; 
-  -webkit-mask:
-     linear-gradient(#fff 0 0) padding-box, 
-     linear-gradient(#fff 0 0);
-  -webkit-mask-composite: xor; 
-          mask-composite: exclude; 
-    z-index: -1; */
+    box-shadow:  2px 4px 6px rgba(190, 170, 79, 0.337);
   }
 
   .projects-grid-small  .project-tile-cont-smoll  #tile-name{
@@ -194,16 +186,10 @@ h4:hover {
 
   .project-overlay {
     opacity: 1;
-    /* background: transparent; */
     border-radius: 0 0 0 0;
-    height: 100%;
+    height: 90%;
     justify-content: end;
     bottom: 0;
-    /* green */
-    /* background: linear-gradient(rgba(111, 78, 164, 0), rgb(5, 66, 68)); */
-    /* purple */
-    /* background: linear-gradient(rgba(111, 78, 164, 0), rgb(25, 5, 68)); */
-    /* black */
     background: linear-gradient(rgba(111, 78, 164, 0), rgb(3, 0, 15));
   }
 
@@ -238,8 +224,8 @@ h4:hover {
  }
   .project-image-side{
     border-radius: 50%;
-    width: 101%;
-    height: 101%;
+    width: 100%;
+    height: 100%;
   }
 }
 
